@@ -2,7 +2,7 @@
 defined('BASEPATH') OR exit('No direct script access allowed');
 
 //location of data folders
-define('DATAPATH', '/data/');
+define('DATAPATH', './data/');
 define('XMLSUFFIX', '.xml');
 /*
 |--------------------------------------------------------------------------
