@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!DOCTYPE timetable SYSTEM "schedule.dtd"[
-    <!ENTITY days SYSTEM "days.xml">
-    <!ENTITY timeslots SYSTEM "timeslots.xml">
-    <!ENTITY courses SYSTEM "courses.xml">
-]
->
+	<!DOCTYPE timetable SYSTEM "schedule.dtd"[
+		<!ENTITY days SYSTEM "days.xml">
+		<!ENTITY timeslots SYSTEM "timeslots.xml">
+		<!ENTITY courses SYSTEM "courses.xml">
+	]
+	>
 
 <timetable>
-    <!-- 3 different faucets-->
-    &days;
-    &timeslots;
-    &courses;
+	<!-- 3 different faucets-->
+	&days;
+	&timeslots;
+	&courses;
 </timetable>
